clinical-orders/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: clinical-orders
  name: clinical-orders
